--- a/docs/providers/Introduction.mdx
+++ b/docs/providers/Introduction.mdx
@@ -19,6 +19,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Zwift](https://zwift.com)                           | Virtual cycling and running                                   |
 | [Withings](https://www.withings.com)                 | Fitness scales, watches and health monitors                   |
 | [iHealth](https://ihealthlabs.com)                   | Blood pressure, Fitness scales, Glucometers & Fitness watches |
+| [8Sleep](https://www.eightsleep.com)                 | Smart Mattress                                                |
 | [Omron](https://www.omron-healthcare.com) (SDK)      | Blood Pressure monitors and scales                            |
 | [Contour](https://www.diabetes.ascensia.com) (SDK)   | Glucometers                                                   |
 | [Accu-Chek](https://www.accu-chek.com) (SDK)         | Glucose Strips/MySugr App                                     |
@@ -71,3 +72,4 @@ All data can be fetched instantaneously, some are configured via our live refres
 | [Omron](https://www.omron-healthcare.com) (SDK)      | Webhooks     |
 | [Contour](https://www.diabetes.ascensia.com) (SDK)   | Webhooks     |
 | [Accu-Chek](https://www.accu-chek.com) (SDK)         | Webhooks     |
+| [8Sleep](https://www.eightsleep.com)                 | Live Refresh |
