--- a/docs/vital-link/introduction.mdx
+++ b/docs/vital-link/introduction.mdx
@@ -4,7 +4,7 @@ sidebar_position: 1
 
 # Introduction to Link
 
-Vital Link is a client-side component your users will interact with in order to link their accounts with Vital and allow you to access their accounts via the Vital API.
+Vital Link is a client-side component your users will interact with in order to link their accounts with Vital. It allows you to access their accounts via the Vital API.
 
 Vital Link will handle credential validation and multi-factor authentication. Links works across modern browsers and mobile browsers via webviews.
 
