--- a/docs/providers/Introduction.mdx
+++ b/docs/providers/Introduction.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-# Introduction
+# Supported providers
 
 We currently Support over 300+ devices, a full list can be seen below.
 
