--- a/api-reference/data/activity/index.mdx
+++ b/api-reference/data/activity/index.mdx
@@ -4,13 +4,16 @@ import { Swagger } from "@theme/swagger";
 
 ## Summary
 
-<Swagger endpoint={"/summary/activity/{user_id}"} method={"get"} title={"Get activity data"}>
+<Swagger endpoint={"/summary/activity/{user_id}"} method={"get"} title={"Get activity data"} include_client_instantiation>
+
+```bash
+curl --request GET \
+     --url {{BASE_URL}}/v2/summary/activity/{user_id}/raw \
+     --header 'Accept: application/json'
+     --header 'x-vital-api-key: <API_KEY>'
+```
 
 ```python
-from vital import Client
-
-client = Client(api_key, "sandbox")
-
 data = client.Activity.get(user_id=*,
     start_date="2020-01-01",
     end_date="2021-01-01"
@@ -21,15 +24,17 @@ data = client.Activity.get(user_id=*,
 
 ## Raw
 
-<Swagger endpoint={"/summary/activity/{user_id}/raw"} method={"get"} title={"Get Raw activity Data"}>
+<Swagger endpoint={"/summary/activity/{user_id}/raw"} method={"get"} title={"Get Raw activity Data"} include_client_instantiation>
+
+```bash
+curl --request GET \
+     --url {{BASE_URL}}/v2/summary/activity/{user_id}/raw \
+     --header 'Accept: application/json'
+     --header 'x-vital-api-key: <API_KEY>'
+```
 
 ```python
-from vital import Client
-
-client = Client(api_key, "sandbox")
-
-data = client.ProviderSpecific.get(user_id=*,
-          provider="oura"
+data = client.Activity.get_raw(user_id=*,
           start_date="2020-01-01",
           end_date="2021-01-01"
           )
