--- a/api-reference/data/profile/index.mdx
+++ b/api-reference/data/profile/index.mdx
@@ -4,35 +4,34 @@ import { Swagger } from "@theme/swagger";
 
 ## Summary
 
-<Swagger endpoint={"/summary/profile/{user_id}"} method={"get"} title={"Get profile data"}>
+<Swagger endpoint={"/summary/profile/{user_id}"} method={"get"} title={"Get profile data"} include_client_instantiation>
+
+```bash
+curl --request GET \
+     --url {{BASE_URL}}/v2/summary/profile/{user_id} \
+     --header 'Accept: application/json'
+     --header 'x-vital-api-key: <API_KEY>'
+```
 
 ```python
-from vital import Client
-
-client = Client(api_key, "sandbox")
-
-data = client.Activity.get(user_id=*,
-    start_date="2020-01-01",
-    end_date="2021-01-01"
-    )
+data = client.Profile.get(user_id=*)
 ```
 
 </Swagger>
 
 ## Raw
 
-<Swagger endpoint={"/summary/profile/{user_id}/raw"} method={"get"} title={"Get Raw profile Data"}>
+<Swagger endpoint={"/summary/profile/{user_id}/raw"} method={"get"} title={"Get Raw profile Data"} include_client_instantiation>
+
+```bash
+curl --request GET \
+     --url {{BASE_URL}}/v2/summary/profile/{user_id}/raw \
+     --header 'Accept: application/json'
+     --header 'x-vital-api-key: <API_KEY>'
+```
 
 ```python
-from vital import Client
-
-client = Client(api_key, "sandbox")
-
-data = client.ProviderSpecific.get(user_id=*,
-          provider="oura"
-          start_date="2020-01-01",
-          end_date="2021-01-01"
-          )
+data = client.Profile.get_raw(user_id=*)
 ```
 
 </Swagger>
