--- a/api-reference/providers/index.mdx
+++ b/api-reference/providers/index.mdx
@@ -4,39 +4,21 @@ import { Swagger } from "@theme/swagger";
 
 ## List of supported providers
 
-<Swagger endpoint={"/providers/"} method={"get"} title={"Get list of providers"}>
+<Swagger endpoint={"/providers/"} method={"get"} title={"Get list of providers"} include_client_instantiation>
 
 ```bash
-curl --request POST \
-     --url https://example.com/v2/user/ \
-     --header 'Accept: application/json' \
-     --header 'Content-Type: application/json' \
-     --data '
-{
-     "client_user_id": "string",
-     "team_id": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
-     "id": "string"
-}
+curl --request GET \
+     --url {{BASE_URL}}/v2/providers/ \
+     --header 'Accept: application/json'
+     --header 'x-vital-api-key: <API_KEY>' \
 '
 ```
 
 ```js
-const { VitalClient } = require("Vital");
-
-const client = new VitalClient({
-  api_key: <API_KEY>,
-  environment: "sandbox",
-});
-
-const user = await client.User.create(client_user_id)
-
+const user = await client.User.create(client_user_id);
 ```
 
 ```python
-from vital import Client
-
-client = Client(api_key=<API_KEY>, environment='sandbox')
-
 user = client.User.create(client_user_id)
 ```
 
